Added "camera" and "threshold" to configuration file

--- a/src/pamface.conf
+++ b/src/pamface.conf
@@ -1,6 +1,16 @@
 ## PAM Face configuration file
 ##
 
+[Global]
+## Use default camera
+camera = -1
+
+[Authentication]
+## The threshold to recognize a user (must be > 0)
+## Low threshold -> low FAR; High threshold -> high FAR
+## Experiment with "pamface-conf --check-user NAME" which shows the threshold
+Threshold = 2
+
 [Users]
 ## Important:
 ## NEVER modify this section manually!
