Detecting faces with CascadeClassifier: Cutting out first detected face and passing this face to LBPH algorithm to improve score

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Depends: ${python:Depends},
          python-argparse,
          libpam-python,
          python-opencv (>= 2.4),
+         opencv-data,
          bash-completion
 Architecture: all
 Description: Pluggable Authentication Module for face authentication.
